added wit intelligence

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-validator": "^4.1.0",
     "mongoose": "^4.11.10",
     "morgan": "~1.8.1",
+    "node-wit": "^4.3.0",
     "pug": "~2.0.0-beta11",
     "request": "^2.81.0",
     "request-promise": "^4.2.1",
